kubernetes/apps/default/ttyd/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttyd
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ttyd
  template:
    metadata:
      labels:
        app: ttyd
    spec:
      securityContext:
        runAsUser: 0 # Explicitly sets the user ID to root (0)
        runAsGroup: 0 # Explicitly sets the group ID to root (0)
        runAsNonRoot: false # Disables the non-root user enforcement
#      hostNetwork: true
      containers:
        - image: ferry133helm/ttyd:0.2
          name: ttyd
          volumeMounts:
#            - name: db-volume
#              mountPath: /var/lib/mysql
      volumes:
#        - name: db-volume
#          persistentVolumeClaim:
#            claimName: mariadb-nfs

---
apiVersion: v1
kind: Service
metadata:
  name: ttyd
  namespace: default
  labels:
    service: ttyd
spec:
  ports:
    - name: ttyd
      protocol: HTTP
      port: 7681
      targetPort: 7681
  selector:
    app: ttyd
