kubernetes/apps/default/ttyd/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ttyd
  namespace: default
spec:
  hostnames: ["ttyd.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: ttyd
          namespace: default
          port: 7681
      matches:
        - path:
            type: PathPrefix
            value: /
